Bug 141090 - Direct Cursor causes instant slowdown in v7.xx of Writer
Summary: Direct Cursor causes instant slowdown in v7.xx of Writer
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
7.1.1.2 release
Hardware: x86-64 (AMD64) Windows (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.4.0
Keywords:
Depends on:
Blocks: Skia
  Show dependency treegraph
 
Reported: 2021-03-18 02:29 UTC by Macktek
Modified: 2021-11-29 20:52 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Macktek 2021-03-18 02:29:45 UTC
Description:
Enabling Direct Cursor automatically creates severe lag in writer.

In prior versions I have used Direct Cursor for all my documents. 
Resetting my Profile removed Direct Cursor. Lag was not present since Direct Cursor was unchecked.
Upon re-activating direct cursor, the problem is very noticeable. There is a lot of cursor lag and delay in typing especially with images in the document.

Steps to Reproduce:
1.Open any doc with images.
2. Go into tools/options/Libre Office Writer/Formatting Aids, and check Direct Cursor under the Direct Cursor section.
3. Try moving and repositioning your cursor.

Actual Results:
VERY slow when Direct Cursor is on.

Expected Results:
If Direct Cursor is not active, then it works fine.

The expected result is that it should work well when Direct Cursor is checked...


Reproducible: Always


User Profile Reset: Yes



Additional Info:
Version: 7.1.1.2 (x64) / LibreOffice Community
Build ID: fe0b08f4af1bacafe4c7ecc87ce55bb426164676
CPU threads: 32; OS: Windows 10.0 Build 17763; UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL

This explains why "resetting" my profile works... because direct cursor gets unchecked when you reset.
Comment 1 Macktek 2021-04-02 04:28:11 UTC
Apologies, what kind of comment is needed?
Comment 2 Maria Grishanova 2021-08-02 19:04:37 UTC
confirm in

Version: 7.1.5.2 (x64) / LibreOffice Community
Build ID: 85f04e9f809797b8199d13c421bd8a2b025d52b5
CPU threads: 8; OS: Windows 10.0 Build 19042; UI render: Skia/Vulkan; VCL: win
Locale: en-US (ru_RU); UI: en-US
Calc: CL
Comment 3 Maria Grishanova 2021-08-02 19:20:51 UTC
When Skia is disabled in the settings (Tools/Options/LibreOfficeDev/View/Graphics Output/uncheck Use Skia for all rendering), Direct Cursor works without delays. When Skia is enabled, the bug is repro.
Comment 4 Macktek 2021-08-19 15:14:55 UTC
I can confirm that at least with 7.1.5.2 (x64), turning off "skia" results in a marked improvement. I don't see any more slow down / lag issues with direct cursor enabled.
Comment 5 Luboš Luňák 2021-11-17 13:23:47 UTC
I cannot reproduce.
- If you enable tools/options/LibreOffice/View/Force Skia software rendering, does that help?
- If yes, does the problem still exist with a build from https://dev-builds.libreoffice.org/daily/master/ ?
Comment 6 Luboš Luňák 2021-11-17 13:35:45 UTC
Actually I can reproduce. It's about moving the _mouse_ cursor.
Comment 7 Commit Notification 2021-11-29 20:49:58 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f7a628f8efe037c1fd7e594eb4b8fc6a44573384

implement xor drawing directly using Skia (tdf#141090)

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Luboš Luňák 2021-11-29 20:52:05 UTC
I will most probably not backport this to 7.3 or 7.2, but for those a workaround should be enabling Tools->Options->LibreOffice->View->Force Skia software rendering.